codex-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part3__approval_modal_patch_from_client_event.snap
---
source: tui/src/chatwidget/tests/part3.rs
expression: terminal.backend().vt100().screen().contents()
---
  Would you like to make the following edits?

  Tool: Write README.md (edit)

  README.md (+2 -0)

    1 +hello
    2 +world

› 1. Yes, proceed (y)
  2. No, and tell the agent what to do differently (esc)

  Press enter to confirm or esc to cancel
