codex-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part3__chat_small_idle_h3.snap
---
source: tui/src/chatwidget/tests/part3.rs
expression: terminal.backend()
---
"                                        "
"                                        "
"                                        "
