codex-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part3__completed_edit_tool_snapshot.snap
---
source: tui/src/chatwidget/tests/part3.rs
expression: blob
---
• Added README.md (+2 -0)
        1 +hello
        2 +world
