codex-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part3__disabled_slash_command_while_task_running_snapshot.snap
---
source: tui/src/chatwidget/tests/part3.rs
expression: blob
---
■ '/model' is disabled while a task is in progress.
