codex-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part3__exploring_step1_start_ls.snap
---
source: tui/src/chatwidget/tests/part3.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
