codex-rs/tui/src/chatwidget/tests/snapshots/nori_tui__chatwidget__tests__part3__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests/part3.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt, bar.txt
